--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,24 +2,28 @@
 
 export(GCD.plotGseaTable)
 export(convertHumanGeneList)
+export(convertHumanPathwayList)
 export(convertMouseGeneList)
 export(correlateFgseaLeadingEdges)
+export(correlateVariables)
 export(correlationAcrossIdents)
+export(fgseaFromMarkers)
 export(fgseaWrapper)
-export(findEnrichedPathways)
 export(findLikelyLightChainIdent)
+export(gcdCellCycleScoring)
 export(gcdRead10X)
 export(gseaPerCluster)
 export(gseaTopPlots)
 export(makeMarkerHeatmaps)
 export(markersBetweenConditions)
+export(percent.table)
 export(prettyPrintMarkers)
 export(prettyPrintPathways)
 export(printGseaPlots)
+export(printGseaPlotsFGSEA)
 export(printMarkerHeatmaps)
 export(printSeuratMarkers)
 export(renameIdents)
-export(renameSeuratIdents)
 export(scoreModules)
 export(seuratAlignClusterWrapper)
 export(seuratAllMarkers)
@@ -34,3 +38,4 @@ export(seuratPCAWrapper)
 export(seuratStartFromCounts)
 export(seuratTSNEPlotCCA)
 export(seuratVariableWrapper)
+exportClasses(gcdSeurat)
