Removed unnecessary MSIGDB pathway list

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,9 @@ export(fgseaFromMarkers)
 export(fgseaWrapper)
 export(findLikelyLightChainIdent)
 export(gcdCellCycleScoring)
+export(gcdPrintSeuratQC)
 export(gcdRead10X)
+export(gcdSeuratCellCycleScoring)
 export(gseaPerCluster)
 export(gseaTopPlots)
 export(makeMarkerHeatmaps)
