Added shiny viewer app

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,3 +3,16 @@ Version: 0.1
 Encoding: UTF-8
 RoxygenNote: 6.1.1
 LazyData: true
+Imports:
+	dplyr,
+	Seurat (>= 3.0),
+	shiny,
+	ggplot2,
+	purrr,
+	colorspace,
+	knitr,
+	kableExtra,
+	scales
+Suggests:
+	fgsea
+
