--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(printGseaPlotsFGSEA)
 export(printMarkerHeatmaps)
 export(printSeuratMarkers)
 export(renameIdents)
+export(runCellViewer)
 export(scoreModules)
 export(seuratAlignClusterWrapper)
 export(seuratAllMarkers)
