--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,14 +16,15 @@ export(correlateVariables)
 export(correlationAcrossIdents)
 export(fgseaFromMarkers)
 export(fgseaWrapper)
-export(findActiveIdent)
 export(findLikelyLightChainIdent)
 export(gcdCellCycleScoring)
 export(gcdDoHeatmap)
 export(gcdPrintSeuratQC)
 export(gcdRead10X)
 export(gcdRenameIdent)
+export(gcdRunUMAP)
 export(gcdSeuratCellCycleScoring)
+export(gcdUpdateSeurat)
 export(gseaPerCluster)
 export(gseaTopPlots)
 export(makeMarkerHeatmaps)
@@ -39,6 +40,7 @@ export(readSeuratRDStoGCD)
 export(renameAllIdents)
 export(runCellViewer)
 export(scoreModules)
+export(setActiveIdent)
 export(setMarkersByCluster)
 export(seuratAlignClusterWrapper)
 export(seuratAllMarkers)
@@ -53,7 +55,7 @@ export(seuratPCAWrapper)
 export(seuratStartFromCounts)
 export(seuratTSNEPlotCCA)
 export(seuratVariableWrapper)
-export(updateSeuratAndRunUMAP)
+export(tryOverwriteIdent)
 exportClasses(gcdSeurat)
 import(Seurat)
 importFrom(ape,drop.tip)
