Reorganizing fgsea classes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(CellGroups)
 export(FindAllMarkersShiny)
 export(GCD.plotGseaTable)
 export(GseaRes)
+export(IdentsSaved)
 export(Palettes)
 export(convertHumanGeneList)
 export(convertHumanPathwayList)
