major further revisions to shiny apps, removed plots from gcdSeurat object until large memory usage is resolved

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(GCD.plotGseaTable)
 export(GseaRes)
 export(IdentsSaved)
 export(Palettes)
+export(breakdownTable)
+export(checkFGSEARanks)
 export(convertHumanGeneList)
 export(convertHumanPathwayList)
 export(convertMouseGeneList)
@@ -32,6 +34,7 @@ export(gcdSeuratCellCycleScoring)
 export(gcdUpdateSeurat)
 export(gseaPerCluster)
 export(gseaTopPlots)
+export(guessGCDSeuratSpecies)
 export(makeMarkerHeatmaps)
 export(markersBetweenConditions)
 export(percent.table)
@@ -65,6 +68,8 @@ exportClasses(gcdSeurat)
 import(Seurat)
 importFrom(ape,drop.tip)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,mutate_all)
+importFrom(fgsea,fgseaMultilevel)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,annotation_raster)
 importFrom(ggplot2,coord_cartesian)
@@ -79,6 +84,9 @@ importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_fill_gradient)
 importFrom(ggplot2,scale_fill_gradientn)
 importFrom(ggplot2,theme)
+importFrom(msigdbr,msigdbr)
+importFrom(msigdbr,msigdbr_show_species)
 importFrom(scales,hue_pal)
+importFrom(scales,percent)
 importFrom(stats,median)
 importFrom(stats,setNames)
