Roxygen added these

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(BestMarkers)
 export(CellGroups)
 export(FindAllMarkersShiny)
 export(GCD.RidgePlot)
+export(GCD.VlnPlot)
 export(GCD.plotGseaTable)
 export(GseaRes)
 export(IdentsSaved)
