Rearranged some functions, modified default param for plotting funcs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,10 +81,15 @@ exportClasses(gcdSeurat)
 import(Seurat)
 importFrom(Matrix,colMeans)
 importFrom(Matrix,rowMeans)
+importFrom(Seurat,FetchData)
+importFrom(Seurat,FindVariableFeatures)
 importFrom(Seurat,GetAssayData)
+importFrom(Seurat,Idents)
+importFrom(Seurat,VariableFeatures)
 importFrom(ape,drop.tip)
 importFrom(cowplot,theme_cowplot)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate_all)
 importFrom(enrichR,enrichr)
 importFrom(fgsea,fgsea)
@@ -126,5 +131,6 @@ importFrom(scales,percent)
 importFrom(stats,median)
 importFrom(stats,rnorm)
 importFrom(stats,setNames)
+importFrom(tibble,rownames_to_column)
 importFrom(utils,globalVariables)
 importFrom(yaml,read_yaml)
