--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,8 @@ importFrom(Seurat,FetchData)
 importFrom(Seurat,FindVariableFeatures)
 importFrom(Seurat,GetAssayData)
 importFrom(Seurat,Idents)
+importFrom(Seurat,NormalizeData)
+importFrom(Seurat,ScaleData)
 importFrom(Seurat,VariableFeatures)
 importFrom(ape,drop.tip)
 importFrom(cowplot,theme_cowplot)
