--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,12 +81,19 @@ exportClasses(gcdSeurat)
 import(Seurat)
 importFrom(Matrix,colMeans)
 importFrom(Matrix,rowMeans)
+importFrom(Seurat,BuildClusterTree)
 importFrom(Seurat,FetchData)
+importFrom(Seurat,FindAllMarkers)
+importFrom(Seurat,FindClusters)
+importFrom(Seurat,FindNeighbors)
 importFrom(Seurat,FindVariableFeatures)
 importFrom(Seurat,GetAssayData)
 importFrom(Seurat,Idents)
 importFrom(Seurat,NormalizeData)
+importFrom(Seurat,RunTSNE)
+importFrom(Seurat,RunUMAP)
 importFrom(Seurat,ScaleData)
+importFrom(Seurat,SummarizeExprAcrossIdents)
 importFrom(Seurat,VariableFeatures)
 importFrom(ape,drop.tip)
 importFrom(cowplot,theme_cowplot)
@@ -129,6 +136,8 @@ importFrom(msigdbr,msigdbr)
 importFrom(msigdbr,msigdbr_show_species)
 importFrom(scales,hue_pal)
 importFrom(scales,percent)
+importFrom(shiny,reactiveValues)
+importFrom(shiny,runApp)
 importFrom(stats,median)
 importFrom(stats,rnorm)
 importFrom(stats,setNames)
