Added new TCR functions among other changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,10 @@ export(GseaRes)
 export(IdentsSaved)
 export(Palettes)
 export(PlanThreads)
+export(SummarizeExprAcrossIdents)
+export(addTCRToSeurat)
+export(annotateCD4.CD8.TCells)
+export(blendedFeaturePlot)
 export(breakdownTable)
 export(checkFGSEARanks)
 export(convertHumanGeneList)
@@ -48,6 +52,9 @@ export(guessSpeciesAddCellCycleScoring)
 export(makeMarkerHeatmaps)
 export(markersBetweenConditions)
 export(percent.table)
+export(plotClonotypeCD4.CD8)
+export(plotClonotypeIntVsSCT)
+export(plotWithSameXYLimits)
 export(prettyPrintMarkers)
 export(prettyPrintPathways)
 export(printGseaPlots)
@@ -76,12 +83,14 @@ export(seuratPCAWrapper)
 export(seuratStartFromCounts)
 export(seuratTSNEPlotCCA)
 export(seuratVariableWrapper)
+export(splitBarPlot)
 export(tryOverwriteIdent)
 exportClasses(gcdSeurat)
 import(Seurat)
 importFrom(Matrix,colMeans)
 importFrom(Matrix,rowMeans)
 importFrom(Seurat,BuildClusterTree)
+importFrom(Seurat,DimPlot)
 importFrom(Seurat,FetchData)
 importFrom(Seurat,FindAllMarkers)
 importFrom(Seurat,FindClusters)
@@ -89,26 +98,35 @@ importFrom(Seurat,FindNeighbors)
 importFrom(Seurat,FindVariableFeatures)
 importFrom(Seurat,GetAssayData)
 importFrom(Seurat,Idents)
+importFrom(Seurat,NoGrid)
+importFrom(Seurat,NoLegend)
 importFrom(Seurat,NormalizeData)
+importFrom(Seurat,RotatedAxis)
 importFrom(Seurat,RunTSNE)
 importFrom(Seurat,RunUMAP)
 importFrom(Seurat,ScaleData)
-importFrom(Seurat,SummarizeExprAcrossIdents)
+importFrom(Seurat,SeuratAxes)
 importFrom(Seurat,VariableFeatures)
 importFrom(ape,drop.tip)
+importFrom(cowplot,draw_plot)
+importFrom(cowplot,ggdraw)
+importFrom(cowplot,plot_grid)
 importFrom(cowplot,theme_cowplot)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate_all)
 importFrom(enrichR,enrichr)
 importFrom(fgsea,fgsea)
 importFrom(future,plan)
+importFrom(future.apply,future_apply)
 importFrom(future.apply,future_lapply)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,annotation_raster)
 importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,cut_number)
 importFrom(ggplot2,element_blank)
+importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_jitter)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_raster)
@@ -127,6 +145,7 @@ importFrom(ggplot2,scale_y_discrete)
 importFrom(ggplot2,scale_y_log10)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,waiver)
+importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylim)
 importFrom(ggridges,geom_density_ridges)
 importFrom(ggridges,stat_density_ridges)
