Plotting feature for IG trees

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,8 +20,9 @@ export(GseaRes)
 export(IdentsSaved)
 export(Palettes)
 export(PlanThreads)
-export(SummarizeExprAcrossIdents)
+export(SummarizeExprAcrossIdentsOld)
 export(addTCRToSeurat)
+export(annotateCD3.CD20.cells)
 export(annotateCD4.CD8.TCells)
 export(blendedFeaturePlot)
 export(breakdownTable)
@@ -32,10 +33,12 @@ export(convertMouseGeneList)
 export(correlateFgseaLeadingEdges)
 export(correlateVariables)
 export(correlationAcrossIdents)
+export(countGlycosylationSites)
 export(fgseaFromMarkers)
 export(fgseaWrapper)
 export(filterModules)
 export(findLikelyLightChainIdent)
+export(fixIgphymlTreeLeaves)
 export(gcdCellCycleScoring)
 export(gcdDoHeatmap)
 export(gcdPrintSeuratQC)
@@ -49,11 +52,14 @@ export(gseaPerCluster)
 export(gseaTopPlots)
 export(guessGCDSeuratSpecies)
 export(guessSpeciesAddCellCycleScoring)
+export(igphyml.treePlot)
 export(makeMarkerHeatmaps)
 export(markersBetweenConditions)
+export(parseBuildTreesLogfile)
 export(percent.table)
 export(plotClonotypeCD4.CD8)
 export(plotClonotypeIntVsSCT)
+export(plotClonotypeTimePoints)
 export(plotWithSameXYLimits)
 export(prettyPrintMarkers)
 export(prettyPrintPathways)
@@ -67,6 +73,7 @@ export(renameAllIdents)
 export(runCellViewer)
 export(runEnrichrOnDEGenes)
 export(scoreModules)
+export(separateCellnamesVDJ)
 export(setActiveIdent)
 export(setMarkersByCluster)
 export(seuratAlignClusterWrapper)
@@ -89,6 +96,7 @@ exportClasses(gcdSeurat)
 import(Seurat)
 importFrom(Matrix,colMeans)
 importFrom(Matrix,rowMeans)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(Seurat,BuildClusterTree)
 importFrom(Seurat,DimPlot)
 importFrom(Seurat,FetchData)
@@ -112,6 +120,9 @@ importFrom(cowplot,draw_plot)
 importFrom(cowplot,ggdraw)
 importFrom(cowplot,plot_grid)
 importFrom(cowplot,theme_cowplot)
+importFrom(dendextend,colored_bars)
+importFrom(dendextend,get_branches_heights)
+importFrom(dendextend,get_leaves_attr)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
@@ -121,6 +132,7 @@ importFrom(fgsea,fgsea)
 importFrom(future,plan)
 importFrom(future.apply,future_apply)
 importFrom(future.apply,future_lapply)
+importFrom(future.apply,future_sapply)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,annotation_raster)
 importFrom(ggplot2,coord_cartesian)
@@ -150,16 +162,26 @@ importFrom(ggplot2,ylim)
 importFrom(ggridges,geom_density_ridges)
 importFrom(ggridges,stat_density_ridges)
 importFrom(ggridges,theme_ridges)
+importFrom(ggsci,pal_aaas)
+importFrom(ggsci,pal_jama)
+importFrom(ggsci,pal_jco)
 importFrom(methods,is)
 importFrom(msigdbr,msigdbr)
 importFrom(msigdbr,msigdbr_show_species)
+importFrom(plyr,revalue)
+importFrom(progressr,progressor)
 importFrom(scales,hue_pal)
 importFrom(scales,percent)
+importFrom(seqinr,c2s)
+importFrom(seqinr,translate)
 importFrom(shiny,reactiveValues)
 importFrom(shiny,runApp)
 importFrom(stats,median)
 importFrom(stats,rnorm)
 importFrom(stats,setNames)
+importFrom(stringr,str_count)
+importFrom(stringr,str_locate_all)
 importFrom(tibble,rownames_to_column)
+importFrom(tidyr,separate)
 importFrom(utils,globalVariables)
 importFrom(yaml,read_yaml)
