Changed how subclones are reconstructed, fixing a bug causing misidentification.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(gcdRead10X)
 export(gcdRenameIdent)
 export(gcdRunUMAP)
 export(gcdSeuratCellCycleScoring)
+export(gcdSoupX.load10X)
 export(gcdSubsetSeurat)
 export(gcdUpdateSeurat)
 export(gseaPerCluster)
@@ -55,6 +56,7 @@ export(guessSpeciesAddCellCycleScoring)
 export(igphyml.treePlot)
 export(makeMarkerHeatmaps)
 export(markersBetweenConditions)
+export(oldParseBuildTreesLogfile)
 export(parseBuildTreesLogfile)
 export(percent.table)
 export(plotClonotypeCD4.CD8)
@@ -109,6 +111,7 @@ importFrom(Seurat,Idents)
 importFrom(Seurat,NoGrid)
 importFrom(Seurat,NoLegend)
 importFrom(Seurat,NormalizeData)
+importFrom(Seurat,Read10X)
 importFrom(Seurat,RotatedAxis)
 importFrom(Seurat,RunTSNE)
 importFrom(Seurat,RunUMAP)
@@ -128,7 +131,6 @@ importFrom(dplyr,filter)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate_all)
 importFrom(enrichR,enrichr)
-importFrom(fgsea,fgsea)
 importFrom(future,plan)
 importFrom(future.apply,future_apply)
 importFrom(future.apply,future_lapply)
@@ -184,4 +186,5 @@ importFrom(stringr,str_locate_all)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,separate)
 importFrom(utils,globalVariables)
+importFrom(utils,read.csv)
 importFrom(yaml,read_yaml)
